Fix avatar overflowing to and cc fields

--- a/skins/default/show_gravatar_16.css
+++ b/skins/default/show_gravatar_16.css
@@ -12,5 +12,5 @@
 
 .headers-table td.to,
 .headers-table td.cc {
-  padding-right: ####px;
+  padding-right: 56px;
 }
